FIX: missing text alignment

--- a/components/button/_helper.scss
+++ b/components/button/_helper.scss
@@ -63,6 +63,7 @@ $btn-disabled-opacity: 0.7 !default;
     font-size: var(--btn-font-size, #{$btn-font-size});
     line-height: var(--btn-line-height, #{$btn-line-height});
     font-weight: var(--btn-font-weight, #{$btn-font-weight});
+    text-align: center;
     vertical-align: middle;
     text-decoration: none;
     transition: $btn-transition;
